docs(claude): comprehensive Claude Code config + ADR + DB rules audit
Sessiya yakunida 4 parallel agent topgan 30+ muammoni hal qildi.
Faqat hujjat va konfiguratsiya o'zgartirildi — Java/SQL kod tegilmagan.

ADR (8 fayl + template + README):
- Sarlavha raqamlari tuzatildi (0002-0005)
- ADR-0001: V014 → V011 typo + 1A/1B/1C sub-strukturasi
- ADR-0005: Proposed → Accepted (server) / In Progress (rollout)
- ADR-0006: klassifikator h_* mezoni aniqlanishi (3 mezon AND)
- ADR-0007: Kafka implementation status (0% kod tushuntirilgan)
- ADR-0008: api-legacy entity rebinding (yangi ADR, split-brain bug)
- AgDR 2026 YAML frontmatter har 8 ta ADR ga
- Verification bloklari (ADR-0008)
- README index status semantikasi (Accepted ≠ Implemented)
- template.md to'liq yangilandi

.claude/ konfiguratsiya:
- settings.json: Task permission, ${CLAUDE_PROJECT_DIR} hook, companyAnnouncements
- rules.md: 7 yangi cross-cutting rule (Naming Exceptions, FK Index Mandate,
  Soft-Delete UNIQUE, Module Entity Ownership, ADR Status Drift, Bootstrap
  Source, h_* Mezoni); real schema strategiyasi (public, kelajak alohida)
- LIQUIBASE_GUIDE.md: 07-add format → V###/M###/S### canonical
- MENU_GUIDE.md: real V012-V014 schema (singular naming)
- MANDATORY_REQUIREMENTS.md: Long → UUID, H2 → PostgreSQL, prioritet
- 5 agent: Required Reading + model optimizatsiyasi (3 sonnet, 2 opus)
- post-edit.sh: 2 yangi check (@Table detector, api-legacy import reject)

Skills (Anthropic 2026):
- .claude/skills/adr-create/SKILL.md (yangi ADR yaratish)
- .claude/skills/adr-verify/SKILL.md (status drift detection)

Pre-commit hook (Golden Rule enforcement):
- .git/hooks/pre-commit (lokal)
- scripts/git-hooks-pre-commit (jamoa setup)
- 4 check: api-legacy entity import, @Table mapping, hemishe_* DDL, rollback

DRY konsolidatsiya:
- Modul-jadval mapping: api-legacy/CLAUDE.md canonical
- Rate-limit YAML: security/CLAUDE.md canonical
- External timeout: api-external/CLAUDE.md canonical
- check_table_mappings.sh: 6 → 3 mart